Fixed very much white space around calculation results

--- a/src/indicators.css
+++ b/src/indicators.css
@@ -12,6 +12,6 @@
     justify-content: space-between;
 }
 
-p.indicator {
+.indicator {
     white-space: nowrap;
 }
